# bazel-go-scaffold

./: .bazelrc  .gitignore  .kazelcfg.json  BUILD.bazel  README.md  WORKSPACE  go.mod  repos.bzl
cmd/server/: BUILD.bazel  main.go
hack/: print-workspace-status.sh  update-bazel.sh  update-deps.sh
portal/: BUILD.bazel
